--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ repositories {
     mavenCentral()
 }
 
+repositories {
+    jcenter()
+}
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
@@ -50,6 +53,10 @@ dependencies {
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
     testCompile 'junit:junit:4.12'
+}
+
+dependencies {
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
